# youtube-feed-download

./: .gitignore  README.md  pyproject.toml
src/youtube_feed_download/: __main__.py  util.py  youtube_feed.py
util/: build-zipapp.sh
